--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           return liff.getProfile();
         } else {
           liff.login({
-            redirectUri: "Redirect URL",
+            redirectUri: "https://banknavy48.github.io/liffgoogleFORM/",
           });
         }
       })
