--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body style="background-color: powderblue;">
   <div class="centerScreen">
     <center>
-      <img src="https://drive.google.com/uc?id=1mEyShWSX9rPf4klIDeMTlHAOc4BsySFK" height="200px" , width="200px" />
+      <img src="https://lh3.googleusercontent.com/d/1SC2X43PnIlVIPTBWWC3y7bZlc8ONn30M" height="200px" , width="200px" />
       <h1>
         กำลังเข้าสู่ Google Form กรุณารอซักครู่
       </h1>
